// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<button
  className="btn btn-md btn-primary"
  onClick={[MockFunction]}
/>
`;

exports[`Button renders correctly with props 1`] = `
<button
  className="btn btn-sm btn-danger btn-danger-fill"
  onClick={[MockFunction]}
/>
`;
